# Barcode-Decoder

./: .gitignore  CMakeLists.txt  Main.qml  README.md  readme.md  videomanager.h
src/: appcontroller.cpp  appcontroller.h  barcodedecoder.cpp  barcodedecoder.h  main.cpp  videomanager.cpp
